syntax = "proto3";

option java_package = "com.BJTU.grpc.DataProto";
option java_outer_classname = "DataProto";
option java_multiple_files = false;

// 处理画像数据请求
service dataProvider {
  // 获取用户画像
  rpc GetUserData (UserDataRequest) returns (UserDataReply) {}

  // 获取电影画像
  rpc GetMovieData (MovieDataRequest) returns (MovieDataReply) {}
}

message UserDataRequest {
  string userId = 1;
}
message UserDataReply {
  string userId = 1;
  string data = 2;
}

message MovieDataRequest {
  string movieId = 1;
}
message MovieDataReply {
  string movieId = 1;
  string data = 2;
}